# MagBounce

./: .gitignore  .gitmodules  2dVector.cpp  2dVector.h  App.cpp  App.h  CMakeLists.txt  CMakeLists.txt~  CollisionHandler.cpp  CollisionHandler.h  Doxyfile  ForceBehaviour.cpp  ForceBehaviour.h  GameState.cpp  GameState.h  InGame.cpp  InGame.h  Level.cpp  Level.h  LevelObject.cpp  LevelObject.h  Menu.cpp  Menu.h  Options.cpp  Options.h  Pause.cpp  Pause.h  Physics.cpp  Physics.h  PhysicsApplyableObject.cpp  PhysicsApplyableObject.h  PlayerObject.cpp  PlayerObject.h  README.markdown  README.txt  Readme NOT.txt  Running.cpp  Running.h  StandardGravityBehaviour.cpp  StandardGravityBehaviour.h  (+14 more)
doc/UML/: Klassendiagramm.dia  Klassendiagramm.dia.autosave
magbounceUML/: magbounceUML.docbook  magbounceUML.xmi
mechanics/: Ball.java  Game.java
mosod_bounce/: Main.java
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
physics/: Collision.java  CollisionState.java  MovingObject.java  Physics.java  Vector2D.java
res/: readme.txt  test.level
src/: App.cpp  App.h  AppState.h  CollisionHandler.h  ForceBehaviour.cpp  ForceBehaviour.h  Game.cpp  Game.h  GameState.cpp  GameState.h  InGame.h  LevelObject.cpp  Menu.h  Pause.h  Running.cpp  Running.h  StandardGravityBehaviour.cpp  StandardGravityBehaviour.h  State.cpp  State.h  TestRenderer.cpp  TestRenderer.h  main.cpp
src/AppStates/: AppState.cpp  AppState.h  Game.cpp  Game.h  Menu.cpp  Menu.h  Options.cpp  Options.h
src/Engine/: App.cpp  App.h  AppState.cpp  AppState.h  Config.h  Input.cpp  Input.h  Logger.cpp  Logger.h  MainThread.cpp  MainThread.h  Sound.cpp  Sound.h
src/Engine/Graphics/: Display.cpp  Display.h  Graphics.cpp  Graphics.h  Renderer.cpp  Renderer.h  StateRenderer.cpp  StateRenderer.h
src/Engine/Input/: InputEvent.cpp
src/Engine/Model/: Level.cpp  Level.h  LevelBuilder.cpp  LevelBuilder.h  Object.cpp  Object.h  PlayerObject.cpp  PlayerObject.h
src/Engine/Model/Level/: ForceBehavior.cpp  ForceBehavior.h  ForceBehaviour.cpp  ForceBehaviour.h  GravityBehavior.h  GravityBehaviour.cpp  GravityBehaviour.h  MagnetismBehavior.cpp  MagnetismBehavior.h  MagnetismBehaviour.cpp  MagnetismBehaviour.h  PhysicalProperties.cpp  PhysicalProperties.h  TimeBehavior.cpp  TimeBehavior.h  TimeBehaviour.cpp  TimeBehaviour.h
src/Engine/Model/Level/Standard/: StandardGravityBehavior.h  StandardGravityBehaviour.cpp  StandardGravityBehaviour.h  StandardMagnetismBehavior.cpp  StandardMagnetismBehavior.h  StandardMagnetismBehaviour.cpp  StandardMagnetismBehaviour.h  StandardPhysics.cpp  StandardPhysics.h  StandardTimeBehaviour.cpp  StandardTimeBehaviour.h
src/Engine/Physics/: Vector.cpp  Vector.h  Vector.hpp  Vector2D.h
src/Engine/Utilities/: Timer.h
src/Game/: App.cpp  App.h  GameState.cpp  GameState.h  main.cpp
src/Game/AppStates/: Game.cpp  Game.h  Menu.cpp  Menu.h  Options.cpp  Options.h
src/Game/GameStates/: GameState.cpp  GameState.h  Pause.cpp  Pause.h  Running.cpp  Running.h
src/Game/Graphics/: BallRenderer.h  GameStateRenderer.cpp  GameStateRenderer.h  RectangularLevelObjectRenderer.cpp  RectangularLevelObjectRenderer.h
src/Game/IO/: EventHandler.h
src/Game/IO/StateInputHandler/: RunningInputHandler.cpp
src/Game/Input/: EventHandler.cpp  EventHandler.h  InputHandler.cpp
src/Game/Input/StateInputHandler/: RunningInputHandler.cpp  RunningInputHandler.h
src/Game/Model/: RectangularLevelObject.cpp  RectangularLevelObject.h
src/Game/Model/Model/Level/Standard/: StandardTimeBehavior.h  (+1 more)
src/Game/Physics/: Physics.cpp  Physics.h  PhysicsAppliableObject.cpp  PhysicsApplyableObject.cpp  PhysicsApplyableObject.h  Vector.h  Vector.hpp
src/Game/Physics/Collision/: Collision.cpp  Collision.h  CollisionHandler.cpp  CollisionHandler.h
src/Game/Utilities/: Timer.cpp
src/GameStates/: GameState.cpp  GameState.h  Pause.cpp  Pause.h  Running.cpp  Running.h
src/Graphics/: BallRenderer.cpp  BallRenderer.h  DisplayConfig.h  GameStateRenderer.cpp  GameStateRenderer.h  Graphics.cpp  Graphics.h  RectangularLevelObjectRenderer.cpp  RectangularLevelObjectRenderer.h  Renderer.cpp  Renderer.h  StateRenderer.cpp  StateRenderer.h  readme.txt
src/Graphics/Graphics/: Display.h  Renderer.cpp
src/IO/: EventHandler.cpp  EventHandler.h  InputHandler.cpp  InputHandler.h  LevelBuilder.cpp  LevelBuilder.h  LevelReader.cpp  LevelReader.h
src/IO/StateInputHandler/: RunningInputHandler.cpp  RunningInputHandler.h
src/Input/Input/: InputEvent.h
src/Model/: Level.cpp  Level.h  LevelObject.cpp  LevelObject.h  Object.h  PlayerObject.cpp  PlayerObject.h  RectangularLevelObject.cpp  RectangularLevelObject.h
src/Model/Level/: ForceBehavior.h  GravityBehavior.cpp  GravityBehavior.h  MagnetismBehavior.h  TimeBehavior.h
src/Model/Level/Standard/: StandardMagnetismBehavior.h  StandardTimeBehavior.cpp  StandardTimeBehavior.h
src/Physics/: CollisionHandler.h  ForceBehaviour.cpp  ForceBehaviour.h  GravityBehaviour.cpp  GravityBehaviour.h  MagnetismBehaviour.cpp  MagnetismBehaviour.h  PhysicalPorperties.cpp  PhysicalPorperties.h  PhysicalProperties.cpp  PhysicalProperties.h  Physics.cpp  Physics.h  PhysicsAppliableObject.h  PhysicsApplyableObject.cpp  PhysicsApplyableObject.h  StandardGravityBehaviour.cpp  StandardGravityBehaviour.h  StandardMagnetismBehaviour.cpp  StandardMagnetismBehaviour.h  StandardPhysics.cpp  StandardPhysics.h  StandardTimeBehaviour.cpp  StandardTimeBehaviour.h  TimeBehaviour.cpp  TimeBehaviour.h  Vector.cpp  Vector.h  Vector2D.cpp  Vector2D.h
src/Physics/Collision/: Collision.cpp  Collision.h  CollisionHandler.cpp  CollisionHandler.h  CollisionShape.cpp  CollisionShape.h
src/Physics/Standard/: StandardGravityBehaviour.cpp  StandardGravityBehaviour.h  StandardMagnetismBehaviour.cpp  StandardMagnetismBehaviour.h  StandardTimeBehaviour.h
tools/: readme.txt
viewWrapper/: ModelWrapper.java
world/: Level.java  LevelManager.java  LevelObject.java  ObjectAppearance.java  Type.java  ViewableObject.java
